[gd_scene load_steps=3 format=3 uid="uid://betb2oihy5uu5"]

[ext_resource type="Script" path="res://item.gd" id="1_woiij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmrv6"]

[node name="cobblestone" type="Area2D"]
script = ExtResource("1_woiij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mmrv6")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 30.0
scale = Vector2(0.5, 0.5)
color = Color(0.337255, 0.337255, 0.337255, 1)

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
